GRF Installation/src/objects/grf01_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Expense (Money going out)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer/Product or Service Donation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <label>Correspondence</label>
        <referenceTo>Correspondence__c</referenceTo>
        <relationshipName>Revenue_Expense_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fundraising_Event__c</fullName>
        <label>Fundraising Event</label>
        <referenceTo>Fundraising_Event__c</referenceTo>
        <relationshipName>Revenue_Expense_Ledger</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>&apos;Record event expenses for reimbursement.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_to_Reimburse__c</fullName>
        <inlineHelpText>Enter the name of person who paid for the expense.  Reimbursement of individuals for specified expenses is done by the Chapter lead.</inlineHelpText>
        <label>Person to Reimburse</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <inlineHelpText>To help track expenses, an invoice number, check number etc.</inlineHelpText>
        <label>Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>Ledger-{00000}</displayFormat>
        <label>Expense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>Expense_Line_Item</fullName>
        <active>true</active>
        <description>Enter an Expense Line Item</description>
        <label>Expense Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>